# chat_app

./: README.md
client/: Cargo.toml
client/src/: main.rs
server/: Cargo.toml
server/src/: handlers.rs  main.rs
server/static/: index.html
wasm_chat_client/: Cargo.toml
wasm_chat_client/src/: lib.rs
