[package]
name = "ChatServer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.35.1", features = ["full"]}
actix-web = "4.0"
actix-rt = "2.5"
actix = "0.13.1"
actix-web-actors = "4.0"
actix-files = "0.6.0"
